# trading-desk-public

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REVIEW.md  ARCHITECTURE_REVIEW_2025.md  CLAUDE.md  CODE_REVIEW_ANALYSIS.md  CODE_REVIEW_DETAILED.md  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_FIXES_APPLIED.md  CODE_REVIEW_INDEX.md  CODE_REVIEW_SUMMARY.txt  CRITICAL_CODE_REVIEW_v2.md  ENHANCEMENTS.md  IMPLEMENTATION_ROADMAP.md  IMPROVEMENTS_IMPLEMENTED.md  LICENSE  LIQUIDITY_SCORING_IMPLEMENTATION.md  LIVE_EXECUTION_VALIDATION.md  LOSS_ANALYSIS_AND_FIXES.md  OPTIMIZATION_CHANGELOG.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_TEST_REPORT.md  PERFORMANCE_ANALYSIS_SUMMARY.md  PROFILING_GUIDE.md  PR_DESCRIPTION.md  PR_DESCRIPTION_SESSION4.md  PR_SUMMARY.md  README.md  REMAINING_TASKS.md  VALIDATION_SUMMARY.md  analyze_full_year_pnl.py  analyze_pnl_by_ticker.py  pytest.ini  requirements.txt  test_optimizations_lite.py  test_regression.py
2.0/: .env.example  .gitignore  .shellcheckrc  ADVISORY_IMPROVEMENTS.md  BACKFILL_SUMMARY.md  BACKUP_STATUS.md  BIAS_CALCULATION_FIX.md  CHANGELOG.md  CHANGELOG_REFACTORING.md  CODE_REVIEW.md  CODE_REVIEW_COMPOSITE_SCORING.md  CODE_REVIEW_POSITION_TRACKING.md  CODE_REVIEW_SESSION.md  CONFIG_REFERENCE.md  DEPLOYMENT.md  EARNINGS_SYNC_GUIDE.md  EARNINGS_SYNC_README.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  FORWARD_TEST_RESULTS.md  IMPLEMENTATION_STATUS.md  LIVE_TRADING_GUIDE.md  MCP_USAGE_GUIDE.md  OPTIMIZATION_RESULTS.md  OPTIMIZATION_ROADMAP.md  PHASE2_CRITICAL_FINDING_VRP_COMPRESSION.md  PHASE2_EXECUTION_PLAN.md  POP_WEIGHT_INCREASE.md  POSITION_SIZING_GUIDE.md  PROFIT_ZONE_FIX.md  PROGRESS.md  README.md  SESSION_SUMMARY.md  SHELL_TESTS_SUMMARY.md  TESTING_RECOMMENDATIONS.md  TEST_RESULTS.md  TEST_SUMMARY.md  THRESHOLD_ADJUSTMENTS.md  WEIGHT_OPTIMIZATION_RESULTS.md  pyproject.toml  (+1 more)
2.0/3.0/: .env.example  PROGRESS.md  requirements.txt
2.0/3.0/config/: training_config.json
2.0/3.0/notebooks/: 02_feature_engineering.ipynb  03_baseline_models.ipynb
2.0/3.0/scripts/: generate_historical_features.py
2.0/archive/: FIXES_APPLIED.md  PHASE2_WEEK1_STATUS.md
2.0/archive/pre_threshold_update_20251121/: BACKTESTING.md  FINAL_CONFIG_COMPARISON.md  LIVE_TRADING_GUIDE.md  POSITION_SIZING_DEPLOYMENT.md  POSITION_TRACKING_GUIDE.md  WORKFLOW_COMPARISON_SUMMARY.md
2.0/backups/: README.md
2.0/docs/: ASYNC_IMPLEMENTATION_GUIDE.md  BIAS_TRACKING.md  CODE_REVIEW_IMPROVEMENTS.md  CODE_REVIEW_SUMMARY.md  COMPOSITE_SCORING_FIXES.md  EXAMPLE_OUTPUT.md  INTEGRATION-SUMMARY.md  METRICS_GUIDE.md  POST_COMMIT_CODE_REVIEW.md  SCANNING_MODES.md  SCORING_WEIGHT_BACKTESTING.md  earnings-date-validation.md
2.0/docs/adr/: README.md
2.0/docs/scan_exports/: scan_20251207.json
2.0/results/: actual_trading_analysis.json  backtest_comprehensive_20241202.json  backtest_results.json  config_recommendation_summary.json  decay_analysis.json  forward_test_2024.json  lookback_analysis.json  lookback_analysis_q234.json  q234_2024_trades.json  regime_analysis.json  regime_analysis_q234.json  timing_analysis.json  trading_analysis_output.txt  walk_forward_results.json  weight_optimization.json
2.0/scripts/: analyze.py  analyze_backtest_results.py  analyze_batch.py  analyze_grid_results.py  analyze_trading_history.py  analyze_weights.py  backfill.py  backfill_historical.py  backfill_yfinance.py  close_position.py  debug_pdf_text.py  debug_sept_oct_losses.py  debug_specific_trades.py  init_positions.py  optimize_decay_factor.py  optimize_lookback_window.py  optimize_market_regime.py  optimize_position_sizing.py  optimize_vrp_thresholds.py  optimize_weights.py  paper_trading_backtest.py  performance.py  positions.py  restore_database.sh  scan.py  scan_async.py  store_bias_prediction.py  sync_earnings_calendar.py  test_asymmetric_bias.py  test_enum_integration.py  test_position_sizing.py  validate_earnings_dates.py  validate_system.py
2.0/scripts/scan/: date_utils.py  filters.py  formatters.py  market_data.py  workflows.py
2.0/src/: container.py
2.0/src/cli/: main.py
2.0/src/config/: config.py  scoring_config.py  validation.py
2.0/src/domain/: enums.py  protocols.py  types.py
2.0/src/utils/: concurrent_scanner.py  dashboard.py  logging.py  market_hours.py  metrics.py  performance.py  rate_limiter.py  serialization.py  shutdown.py
2.0/tests/: conftest.py  test_scan_quality_score.py
2.0/tests/integration/: __init__.py  test_async_analyzer.py  test_end_to_end.py
2.0/tests/performance/: test_load.py
2.0/tests/shell/: test_trade_integration.sh
2.0/tests/unit/: test_backtest_engine_v2.py  test_bug_fixes_nov13.py  test_calculators.py  test_circuit_breaker.py  test_cleanup_duplicate_earnings.py  test_consistency_enhanced.py  test_database_sync.py  test_earnings_fetcher_fallback.py  test_edge_cases.py  test_hybrid_cache.py  test_implied_move_edge_cases.py  (+16 more)
(+888 files in other folders)
