[project]
name = "ivcrush"
version = "2.5.0"
description = "IV Crush Trading System - Quantitative Earnings Options Strategy Scanner"
requires-python = ">=3.11"
authors = [
    {name = "Trading Desk"}
]
readme = "README.md"
keywords = ["options", "trading", "iv-crush", "volatility", "earnings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "numpy>=2.4.0",
    "praw>=7.8.0",
    "typer>=0.21.0",
    "rich>=13.0.0",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
whisper = [
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "playwright>=1.58.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
ivcrush = "src.cli.main:main"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance/load tests",
    "slow: Slow running tests",
    "asyncio: Async tests using pytest-asyncio",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
